project2/test/test_11710204_6.out
Error type 6 at Line 4: left side in assignment is rvalue
