project2/test/test_11710204_6.spl
int test_11710204_6()
{
  int b = 2;
  3 = b;
}
